<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/close"
        android:padding="5dp"
        android:id="@+id/iv_back"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"></ImageView>

    <TextView
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:id="@+id/heading"
        android:fontFamily="@font/lato"
        android:text="Registration with the mobile number which is linked to your Aadhar Card"
        android:layout_below="@+id/iv_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>


    <LinearLayout
        android:padding="10dp"
        android:layout_below="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/codelayout"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/codeSn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:dropDownWidth="70dp"
            android:spinnerMode="dropdown"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryCodeInput"
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countryCode"
                android:layout_width="fill_parent"
                android:fontFamily="@font/lato"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:text="+91"
                android:background="@color/switch_thumb_normal_material_light"
                android:inputType="phone"
                android:maxLength="5"
                android:paddingLeft="7dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3.0dip"
            android:layout_weight="0.3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="13"
                android:fontFamily="@font/lato"
                android:paddingLeft="7dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/codelayout"
        android:layout_marginTop="@dimen/spacing_small"
         android:padding="10dp"
        android:id="@+id/checklayout"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkAgreeTo"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/lato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/text"
            android:layout_toRightOf="@+id/chkAgreeTo"
            android:text="@string/i_agree_to"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/black" />

        <TextView
            android:fontFamily="@font/lato"
            android:id="@+id/txtAgreeTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:layout_toRightOf="@+id/text"
            android:text="@string/terms_of_service"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/circular_border"
            android:textStyle="bold" />
        <TextView
            android:fontFamily="@font/lato"
            android:id="@+id/amp"
            android:layout_toRightOf="@+id/chkAgreeTo"
            android:layout_below="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=" &amp; "
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/black"/>

        <TextView
            android:fontFamily="@font/lato"
            android:id="@+id/privacypolicy"
            android:layout_toRightOf="@+id/amp"
            android:layout_below="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/privacy_policy"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/circular_border"
            android:textStyle="bold" />


        </RelativeLayout>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="118dp"
        android:layout_height="125dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send"
        android:layout_below="@+id/checklayout"
        android:layout_margin="10dp"
       android:text="Get Verification Code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark"
        android:text="Error "
        android:visibility="gone"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>